--- a/index.html
+++ b/index.html
@@ -29,13 +29,7 @@
     <header class="header">
       <div class="header__container">
         <div class="block__logo">
-          <span class="logo" href="#">
-            <div class="block__logo-org">
-              <span class="logo-org">Государственная административно-техническая инспекция</span>
-              <span class="logo-org logo-org-small">Правительство Санкт-Петербурга</span>
-              <span class="name__mobile">ГАТИ</span>
-            </div>
-          </span>
+          <div class="logo"><img src="./img/icons/header-logo-2.png" alt=""></div>
         </div>
         <div class="header__menu menu">
           <div class="menu__icon">
