--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <main class="block__main">
       <section class="slider-top">
         <div class="main-top-container">
-          <div class="row">
+          <div class="row inform">
             <!-- lEFT BLOCK CONTENT -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 main-left-content">
               <div class="row">
@@ -180,33 +180,31 @@
                 </div>
               </div>
               <!-- MAP SERVICES -->
-              <div class="map-row">
-                <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 top-map">
-                    <div class="map_block">
-                      <a class="titlemap" data-text="ГИС ОГС. Ордера на работы" href="https://public.pob.adc.spb.ru/map">
-                        <!--<div class="map-container">
-                          <p>ГИС ОГС. Ордера на работы</p>
-                        </div>-->
-                        <div class="text">
-                          <h3>ГИС ОГС. Ордера на работы</h3>
-                        </div>
-                        <img src="./img/slider/pob_adc_spb.jpg" class="img-map" alt="" width="100%"> 
-                      </a>
-                    </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 top-map">
+                  <div class="map_block">
+                    <a class="titlemap" data-text="ГИС ОГС. Ордера на работы" href="https://public.pob.adc.spb.ru/map">
+                      <!--<div class="map-container">
+                        <p>ГИС ОГС. Ордера на работы</p>
+                      </div>-->
+                      <div class="text">
+                        <h3>ГИС ОГС. Ордера на работы</h3>
+                      </div>
+                      <img src="./img/slider/pob_adc_spb.jpg" class="img-map" alt="" width="100%"> 
+                    </a>
                   </div>
-                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 top-map">
-                    <div class="map_block">
-                      <a class="titlemap" data-text="Ограничения движения на карте" href="/index.php?option=com_content&amp;view=article&amp;id=76&amp;Itemid=100">
-                        <!--<div class="map-container">
-                          <p>Ограничения движения на карте</p>
-                        </div>-->
-                        <div class="text">
-                          <h3>Ограничения движения на карте</h3>
-                        </div>
-                        <img src="./img/slider/map__gati.png" border="1" class="img-map" alt="" width="100%">
-                      </a>
-                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 top-map">
+                  <div class="map_block">
+                    <a class="titlemap" data-text="Ограничения движения на карте" href="/index.php?option=com_content&amp;view=article&amp;id=76&amp;Itemid=100">
+                      <!--<div class="map-container">
+                        <p>Ограничения движения на карте</p>
+                      </div>-->
+                      <div class="text">
+                        <h3>Ограничения движения на карте</h3>
+                      </div>
+                      <img src="./img/slider/map__gati.png" border="1" class="img-map" alt="" width="100%">
+                    </a>
                   </div>
                 </div>
               </div>
@@ -216,102 +214,98 @@
                   <h3>Услуги</h3>
                 </div>
               </div>
-              <div class="map-row">
-                <div class="row">
+              <div class="row">
 
-                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
-                    <div class="sliderban_1">
-                      <div class="slider _three"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text"></div>
-                              <div class="sl_h1">
-                                  <span>Производство работ</span>
-                              </div>
-                          </div>    
-                      </div>
-                      <div class="slider _one"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text"></div>
-                              <div class="sl_h1">
-                                  <span>Адресные программы</span>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="slider _two"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text"></div>
-                              <div class="sl_h1">
-                                  <span>Ограничение движения</span>
-                              </div>
-                          </div>
-                      </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
+                  <div class="sliderban_1">
+                    <div class="slider _three"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text"></div>
+                            <div class="sl_h1">
+                                <span>Производство работ</span>
+                            </div>
+                        </div>    
+                    </div>
+                    <div class="slider _one"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text"></div>
+                            <div class="sl_h1">
+                                <span>Адресные программы</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider _two"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text"></div>
+                            <div class="sl_h1">
+                                <span>Ограничение движения</span>
+                            </div>
+                        </div>
                     </div>
                   </div>
+                </div>
 
-                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
-                    <div class="sliderban_1 slide_two">
-                      <div class="slider _one"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Ход рассмотрения дел об ограничении движения</span>
-                              </div>
-                          </div>    
-                      </div>
-                      <div class="slider _two"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Справка о состоянии дел</span>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="slider _three"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Перечень рассматриваемых административных дел</span>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="slider _one"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Запрос для согласований</span>
-                              </div>
-                          </div>    
-                      </div>
-                      <div class="slider _two"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Кабинет тех. присоединении</span>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="slider _three"><a href="#"></a>
-                          <div class="sl">
-                              <div class="sl-text_1"></div>
-                              <div class="sl_h1">
-                                  <span>Открытые данные</span>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="slider _one"><a href="#"></a>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 bot-slide">
+                  <div class="sliderban_1 slide_two">
+                    <div class="slider _one"><a href="#"></a>
                         <div class="sl">
                             <div class="sl-text_1"></div>
                             <div class="sl_h1">
-                                <span>Готовность к получению ордера</span>
+                                <span>Ход рассмотрения дел об ограничении движения</span>
+                            </div>
+                        </div>    
+                    </div>
+                    <div class="slider _two"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text_1"></div>
+                            <div class="sl_h1">
+                                <span>Справка о состоянии дел</span>
                             </div>
                         </div>
+                    </div>
+                    <div class="slider _three"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text_1"></div>
+                            <div class="sl_h1">
+                                <span>Перечень рассматриваемых административных дел</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider _one"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text_1"></div>
+                            <div class="sl_h1">
+                                <span>Запрос для согласований</span>
+                            </div>
+                        </div>    
+                    </div>
+                    <div class="slider _two"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text_1"></div>
+                            <div class="sl_h1">
+                                <span>Кабинет тех. присоединении</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider _three"><a href="#"></a>
+                        <div class="sl">
+                            <div class="sl-text_1"></div>
+                            <div class="sl_h1">
+                                <span>Открытые данные</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider _one"><a href="#"></a>
+                      <div class="sl">
+                          <div class="sl-text_1"></div>
+                          <div class="sl_h1">
+                              <span>Готовность к получению ордера</span>
+                          </div>
                       </div>
                     </div>
                   </div>
-                  
                 </div>
               </div>
-
             </div>
             <!-- RIGHT BLOCK CONTENT -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 main-right-content">
