main site style upd

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
     
 </head>
 <body>
-
-  <!--/////////////////// Header Sticky ///////////////////-->
   <div id="main_div" class="main__container">
     <header class="header">
       <div class="header__container">
         <div class="block__logo">
-          <div class="logo"><img src="./img/icons/header-logo-2.png" alt=""></div>
+          <div class="logo"><img src="./img/icons/header-logo-3.png" alt=""></div>
         </div>
         <div class="header__menu menu">
           <div class="menu__icon">
@@ -171,12 +169,12 @@
     <main class="block__main">
       <section class="slider-top">
         <div class="main-top-container">
-          <div class="row inform">
+          <div class="row">
             <!-- lEFT BLOCK CONTENT -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 main-left-content">
-              <div class="row">
+              <div class="row inform">
                 <div class="block-content-name">
-                  <h3>Информирование</h3>
+                  <span>Информирование</span>
                 </div>
               </div>
               <!-- MAP SERVICES -->
@@ -211,7 +209,7 @@
               
               <div class="row uslugi">
                 <div class="block-content-name">
-                  <h3>Услуги</h3>
+                  <span>Услуги</span>
                 </div>
               </div>
               <div class="row">
@@ -309,9 +307,9 @@
             </div>
             <!-- RIGHT BLOCK CONTENT -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 main-right-content">
-              <div class="row">
+              <div class="row news">
                 <div class="block-content-name block-news">
-                  <h3>Новости</h3>
+                  <span>Новости</span>
                 </div>
               </div>
               <!-- NEWS BLOCK -->
@@ -376,7 +374,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 uslugi-btn">
               <div class="clearfix">
-                <div class="uslugi_img_1"><p><a title="Методические рекомендации и образцы документов" href="http://gati-online.ru/index.php?option=com_content&view=article&id=64&Itemid=100"><img class="btn-img" src="./img/content/data.svg" alt="..."></a></p></div>
+                <div class="uslugi_img_1"><p><a title="Методические рекомендации и образцы документов" href="http://gati-online.ru/index.php?option=com_content&view=article&id=64&Itemid=100"><img class="btn-img" src="./img/content/instructions.svg" alt="..."></a></p></div>
                 <p>Методические рекомендации и образцы документов.</p>
               </div> 
             </div>
