--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="block__visual">
           <div class="logo-visual">
             <img src="./img/icons/eye-icon-1.png" class="visuall__logo">
-            <span>для слабовидящих</span>
+            <span class="menu__link">для слабовидящих</span>
             <ul class="menu__sub-list">
               <li><a class="menu__sub-link" onclick="zoompl();return false;">Увеличить текст</a></li>
               <li><a class="menu__sub-link" onclick="zoommn();return false;">Уменьшить текст</a></li>
