--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="header__container">
         <div class="block__logo">
           <div class="logo"><img src="./img/icons/header-logo-3.png" alt=""></div>
+          <div class="mob_logo"><img src="./img/icons/ADMIN.png" alt=""></div>
         </div>
         
         <div class="header__menu menu">
@@ -151,7 +152,7 @@
         <div class="block__visual">
           <div class="logo-visual">
             <img src="./img/icons/eye-icon-1.png" class="visuall__logo">
-            <span class="menu__link">для слабовидящих</span>
+            <span class="menu__link vis_text">для слабовидящих</span>
             <ul class="menu__sub-list">
               <li><a class="menu__sub-link" onclick="zoompl();return false;">Увеличить текст</a></li>
               <li><a class="menu__sub-link" onclick="zoommn();return false;">Уменьшить текст</a></li>
@@ -398,23 +399,21 @@
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
               <div class="sliderban">
-                <div class="baners" ><a href="http://2021.polkrf.ru/?utm_source=media_websites&utm_medium=banner&utm_campaign=polk_online" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_bes_polk.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_hr.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_essk3.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_nspb.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_guspb.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_rgis.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_bg.png "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_nk.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_esia.jpg "/></a></div>
-
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_kal_1.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_fns_2.png "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_gosuslugi.jpg "/></a></div>
-
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_lc.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_gor_dialog.jpg "/></a></div>
-                <div class="baners" ><a href="#" target="_blank"><img  class="img-responsive banimg" src="./img/images/ban_perepis.jpg "/></a></div>
+                <div class="baners" ><a href="http://2021.polkrf.ru/?utm_source=media_websites&utm_medium=banner&utm_campaign=polk_online" target="_blank"><img  class="banimg" src="./img/images/ban_bes_polk.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_hr.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_essk3.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_nspb.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_guspb.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_rgis.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_bg.png "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_nk.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_esia.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_kal_1.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_fns_2.png "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_gosuslugi.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_lc.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_gor_dialog.jpg "/></a></div>
+                <div class="baners" ><a href="#" target="_blank"><img  class="banimg" src="./img/images/ban_perepis.jpg "/></a></div>
               </div>
             </div>   
           </div>
@@ -452,11 +451,11 @@
               <div>
                 <div class="footer-text">Yandex.Metrika</div>
                 <div class="footer-text">MailRu.Metrika</div>
-                <div class="login__button">
+                <div class="login__button dropup">
                   <a class="login" href="#" role="button" id="dropdownMenuBut" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <span>Войти</span>
                   </a>
-                  <div class="dropdown-menu dropdown-menu-left login__drop" aria-labelledby="dropdownMenuBut">
+                  <div class="dropdown-menu dropdown-menu-right login__drop" aria-labelledby="dropdownMenuBut">
                     <form method="post" name="login" id="form-login">
                       <p id="form-login-username">
                         <label for="modlgn_username" style="float:left">Логин</label>
@@ -472,7 +471,7 @@
                     </form>
                   </div>
                 </div>
-                <div class="footer-text _secret"><a href="index.php?option=com_content&view=article&id=231&Itemid=192">_______</a></div>
+                <div class="footer-text _secret"><a href="index.php?option=com_content&view=article&id=231&Itemid=192">______</a></div>
               </div>
             </div>
           </div>
