--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <header class="header">
       <div class="header__container">
         <div class="block__logo">
-          <div class="logo"><img src="./img/icons/header-logo-3.png" alt=""></div>
-          <div class="mob_logo"><img src="./img/icons/ADMIN.png" alt=""></div>
+          <a href="./index.html">
+            <div class="logo"><img src="./img/icons/header-logo-3.png" alt=""></div>
+            <div class="mob_logo"><img src="./img/icons/ADMIN.png" alt=""></div>
+          </a>
         </div>
         
         <div class="header__menu menu">
