gati +page gosuslugi

--- a/gosuslugi/order.html
+++ b/gosuslugi/order.html
@@ -39,7 +39,7 @@
         </div>
         <nav class="menu__body">
           <ul class="menu__list">
-            <li class=""><a href="" class="menu__link">Главная</a></li>
+            <li class=""><a href="../index.html" class="menu__link">Главная</a></li>
             <li class="drop__link">
               <span class="menu__link">Инспекция</span>
               <span class="menu__arrow"></span>
@@ -111,10 +111,10 @@
               <span class="menu__link link_active">Гос. услуги</span>
               <span class="menu__arrow"></span>
               <ul class="menu__sub-list">
-                <li><a class="menu__sub-link" href="./gosuslugi/order.html">Оформление ордера на производство земляных работ</a></li>
-                <li><a class="menu__sub-link" href="">Включение работ в адресную программу</a></li>
-                <li><a class="menu__sub-link" href="">Оформление распоряжения об ограничении движения</a></li>
-                <li><a class="menu__sub-link" href="">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
+                <li><a class="menu__sub-link" href="#order">Оформление ордера на производство земляных работ</a></li>
+                <li><a class="menu__sub-link" href="#adres">Включение работ в адресную программу</a></li>
+                <li><a class="menu__sub-link" href="#ogran">Оформление распоряжения об ограничении движения</a></li>
+                <li><a class="menu__sub-link" href="#avariya">Доступ к кабинету владельца инженерных сетей и иных объектов</a></li>
               </ul>
             </li>
             <li class="drop__link">
@@ -156,8 +156,121 @@
   </header>
 
   <main>
-    <section class="order_container">
+    <section class="top_container">
+      <div><span class="top_head_text">Государственные услуги, предоставляемые ГАТИ</span></div>
+    </section>
 
+    <section class="order_container" id="order"> 
+      <div class="first_row">
+          <div class="row">
+            <div class="col-8 text-gosulugi">
+              <span>Оформление ордера на производство земляных работ</span>
+              <p>Выдавать ордера на производство земляных, ремонтных и отдельных работ, связанных с благоустройством территории Санкт-Петербурга.</p>
+              <p>Уникальный реестровый номер: 7800000010000086650</p>
+            </div>
+
+            <div class="col-4 img-flex">
+              <div class="img-gosuslugi img-right"></div>
+            </div>
+          </div>
+          <div class="row button_row">
+            <div class="col-3">
+              <a href="https://public.pob.adc.spb.ru/map?layers=orders_active" target="_blank" class="btn-gosuslugi">Картографический сервис</a>
+            </div>
+            <div class="col-3">
+              <a href="" class="btn-gosuslugi">Реестр ордеров</a>
+            </div>
+            <div class="col-3">
+              <a href="https://gu.spb.ru/188573/eservice/" target="_blank" class="btn-gosuslugi">Получить услугу</a>
+            </div>
+            <div class="col-3">
+              <a href="" class="btn-gosuslugi">Информационные материалы</a>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section class="order_container_white" id="adres">
+      <div class="second_row">
+        <div class="row">
+          <div class="col-4 img-flex">
+            <div class="img-gosuslugi img-left"></div>
+          </div>
+          <div class="col-8 text-gosulugi">
+            <span>Включение работ в адресную программу</span>
+            <p>Формировать и согласовывать в порядке, установленном Правительством Санкт-Петербурга, перспективной и оперативной адресной программы земляных, ремонтных и отдельных работ, связанных с благоустройством территории Санкт-Петербурга.</p>
+            <p>Уникальный реестровый номер: 7800000010000059751</p>
+          </div>
+        </div>
+
+        <div class="row button_row"> 
+          <div class="col-3">
+            <a href="" class="btn-gosuslugi">Картографический сервис</a>
+          </div>
+          <div class="col-3">
+            <a href="" class="btn-gosuslugi">Реестр адресных программ</a>
+          </div>
+          <div class="col-3">
+            <a href="https://gu.spb.ru/188913/eservice/" class="btn-gosuslugi">Получить услугу</a>
+          </div>
+          <div class="col-3">
+            <a href="" class="btn-gosuslugi">Информационные материалы</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="order_container" id="ogran">
+      <div class="third_row">
+          <div class="row">
+            <div class="col-8 text-gosulugi">
+              <span>Оформление распоряжения об ограничении движения</span>
+              <p>Принимать решения о временных ограничении или прекращении движения транспортных средств по автомобильным дорогам регионального значения в Санкт-Петербурге по основаниям, установленным в Подпункте 1 Пункта 1 и Подпункте 6 Пункта 2 Статьи 2 Закона Санкт-Петербурга от 29.06.2011 №434-89 «О временных ограничении или прекращении движения транспортных средств по автомобильным дорогам в Санкт-Петербурге и внесении изменений в Закон Санкт-Петербурга «Об административных правонарушениях в Санкт-Петербурге».</p>
+              <p>Уникальный реестровый номер: 7800000010000009193</p>
+            </div>
+
+            <div class="col-4 img-flex">
+              <div class="img-gosuslugi img-right"></div>
+            </div>
+          </div>
+          <div class="row button_row">
+            <div class="col-4">
+              <a href="" class="btn-gosuslugi">Картографический сервис</a>
+            </div>
+            <div class="col-4">
+              <a href="https://gu.spb.ru/188419/eservice/" class="btn-gosuslugi">Получить услугу</a>
+            </div>
+            <div class="col-4">
+              <a href="" class="btn-gosuslugi">Информационные материалы</a>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <section class="order_container_white" id="avariya">
+      <div class="fourth_row">
+          <div class="row">
+            <div class="col-4 img-flex">
+              <div class="img-gosuslugi img-left"></div>
+            </div>
+            <div class="col-8 text-gosulugi">
+              <span>Доступ к кабинету владельца инженерных сетей и иных объектов</span>
+              <p>Регистрировать в «Личном кабинете» на сайте Государственной административно-технической инспекции <a href="../index.html">gati-online.ru</a> владельцев инженерных коммуникаций, иных объектов, при повреждении которых возникает необходимость производства аварийных работ.</p>
+              <p>Уникальный реестровый номер: 7800000000168946950</p>
+            </div>
+          </div>
+          <div class="row button_row">
+            <div class="col-4">
+              <a href="https://public.pob.adc.spb.ru/map?layers=notifications_active" target="_blank" class="btn-gosuslugi">Картографический сервис</a>
+            </div>
+            <div class="col-4">
+              <a href="https://gu.spb.ru/602053/traditional/" target="_blank" class="btn-gosuslugi">Получить услугу</a>
+            </div>
+            <div class="col-4">
+              <a href="http://gati-online.ru/p_av.pdf" target="_blank" class="btn-gosuslugi">Информационные материалы</a>
+            </div>
+          </div>
+      </div>
     </section>
 
     <section class="banner-content">
